# AI_Agentic_Systems_Mastery

./: .gitignore  ARCHITECTURE.md  INDEX.md  README.md  pyproject.toml  reference.txt  requirements.txt  sample.txt
.github/workflows/: ci.yml
01_Curriculum/: How_I_Built_My_Agentic_System.md
01_StudyNotes/Courses/: README.md
01_StudyNotes/Reflections/: README.md
02_Projects/04_AvatarAssistant/: PROJECT.yaml  README.md  requirements.txt
02_Projects/_TEMPLATE/: .env.example  CHANGELOG.md  PROJECT.yaml  README.md  metrics.md  tasks.md
03_Readings/Articles/: README.md
03_Readings/Papers/: README.md
04_Logs/Monthly_Reviews/: TEMPLATE_Monthly_Review.md
04_Logs/Progress_Reports/: 2025-11-11_Progress.md  TEMPLATE_Progress_Report.md
content/: index.yaml
content/agent_journal/: agent_journal.asset.yaml
content/dpif_white_paper/: dpif_white_paper.asset.yaml
content/psychographic_profile/: psychographic_profile.asset.yaml
docs/: INGESTION_BRIEF.md
embedding/: agent_journal.jsonl  dpif_white_paper.jsonl  forward_by_nature_philosophy.jsonl  milestone_ingestion_pipeline.jsonl  psychographic_profile.jsonl  wallace_line.jsonl
scripts/: build_journal_month.sh  doctor.py  ingest_asset.py
summaries/: dpif_white_paper_summary.txt  forward_by_nature_philosophy_summary.txt  milestone_ingestion_pipeline_summary.txt  psychographic_profile_summary.txt  wallace_line_summary.txt
templates/: reflection_log.md
tests/: conftest.py  test_evaluate.py  test_manifest.py  test_retrieval.py  test_run.py  test_server_gui.py  test_summarize_offline.py  test_workflow_a.py
(+44 files in other folders)
